--- a/Logistica.Estoque.Consumer/Logistica.Estoque.Consumer.csproj
+++ b/Logistica.Estoque.Consumer/Logistica.Estoque.Consumer.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Logistica.Shared\Logistica.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
