--- a/Logistica.Pedidos.Api/Logistica.Pedidos.Api.csproj
+++ b/Logistica.Pedidos.Api/Logistica.Pedidos.Api.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Logistica.Shared\Logistica.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
