--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,20 @@ services:
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
-    hostname: rabbit-host
-
     ports:
-      - "5672:5672"   # porta usada pelos apps (C#) para enviar/receber mensagens
-      - "15672:15672" # painel web do RabbitMQ
+      - "5672:5672"
+      - "15672:15672"
 
-    restart: unless-stopped
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: sqlserver
+    environment:
+      ACCEPT_EULA: "Y"
+      MSSQL_SA_PASSWORD: "291690Rc@"
+    ports:
+      - "1433:1433"
+    volumes:
+      - sqlserver_data:/var/opt/mssql
+
+volumes:
+  sqlserver_data:
